examples/test/testpolicy17088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17088
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key39: value16
      key28: value6
      key44: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value49
          key30: value22
      podSelector:
        matchLabels:
          key13: value28
          key1: value14
